--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,44 @@
 	padding: 2rem;
 	text-align: center;
 }
+
+.loading-spinner-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(101, 67, 33, 1);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999;
+}
+
+.loading-spinner {
+	width: 3rem;
+	height: 3rem;
+	border-color: beige;
+	border-right-color: transparent;
+}
+.loading-text {
+	display: block; /* Force it to be a block element */
+	white-space: nowrap; /* Keep everything on one line */
+	color: beige;
+}
+.bounce-char {
+	display: inline-block;
+	animation: bounce 0.6s ease infinite;
+	margin: 0 2px;
+}
+
+@keyframes bounce {
+	0%,
+	100% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(-10px);
+	}
+}
